[package]
name = "alphabot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version =  "1.53", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
